@@ -848,3 +848,4 @@ seen. gmtime warning still there
   his box
 - Fixed a #undef INET6 bug
 - Made Link denied error a little more descriptive
+- Various coding regardign bugreport
